<resources>
    <string name="app_name">Dance</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="btnPlayorPause">PlAY/PAUSE</string>
    <string name="btnStop">STOP</string>
    <string name="btnQuit">QUIT</string>
    <string name="btnPre">PREVIOUS</string>
    <string name="btnNext">NEXT</string>

    <string name="play">Play</string>
    <string name="playing">Playing</string>
    <string name="pause">Pause</string>

    <string name="musicDir">/Music/You.mp3</string>
    <string name="musicDir1">/Music/pokeface.mp3</string>
    <string name="title_activity_dancing">dancing</string>
    <string name="title_activity_song_control">SongControlActivity</string>
    <string name="title_activity_test">Test</string>
</resources>
